styles/style.css
:root {
    --main-bg: #0E1822;
    --header-bg: #1A3B3F;
    --search-bg: #1A3B3F88;
    --border-color: #fff;
    --radius: 5px;
    --blur-color: #f3a75140;
    --font-color: #fff;
    --main-font: 'PT Sans';
    --serif-font: 'PT Serif';
    --fs: 16px;
}

html {
    box-sizing: border-box;
}

* {
    margin: 0;
    padding: 0;
}

*, *:before, *:after {
    box-sizing: inherit;
}

[href] {
    text-decoration: none;
    color: var(--font-color);
}

body {
    font-family: var(--main-font), 'sans-serif';
    height: 100vh;
    background-color: var(--main-bg);
    background-image: url('../assets/img/bonfire_mobile.jpg');
    background-repeat: no-repeat;
    background-size: contain;
    background-position: 50% 100%;
    color: var(--font-color);
    font-size: var(--fs);
}

header {
    background-color: var(--header-bg);
    position: relative;
}

 .banner {
     padding: 0.8rem 1.1rem;
     display: flex;
     align-items: center;
     justify-content: space-between;
 }

 .banner p {
     margin: 0;
     font-size: 1.3rem;
     text-transform: uppercase;
     font-weight: bold;
     letter-spacing: 0.1rem;
 }
 
nav {
    position: absolute;
    display: none;
    /* display: flex; */
    flex-direction: column;
    right: 0.5rem;
    top: 0.65rem;
    border: 1px solid var(--border-color);
    box-shadow: 0 -2px 10px 1px var(--blur-color);
    border-radius: var(--radius);
    background-color: var(--header-bg);
    width: 62%;
}

nav ul {
    list-style: inside;
    font-size: 1.1rem;
    font-weight: bold;
    line-height: 2.6rem;
    letter-spacing: 0.1rem;
    margin: 0 0 2rem 1rem;
}

nav ul li:last-child {
    display: none;
}

.close {
    align-self: flex-end;
    margin: 5px 5px 0 5px;
}

section {
    display: grid;
    grid-template-rows: auto auto auto;
    width: 100%;
    padding: 5%;
}

.search-bar {
    position: relative;
    width: 100%;
    height: 2.5rem;
    /* margin-top: 1rem; */
    margin-bottom: 0.5rem;
    box-shadow: 0 -2px 10px 1px var(--blur-color);
}

.search-bar input {
    height: 100%;
    width: 100%;
    border: none;
    padding-left: 0.3rem;
    font-size: 0.9rem;
    color: var(--font-color);
    border: 1px solid var(--border-color);
    border-radius: var(--radius);
    background-color: var(--search-bg);
}

.search-song {
    position: absolute;
    top: 0.4rem;
    right: 1rem;
    border: none;
    background: none;
    font-size: 1.2rem;
    color: var(--font-color);
    opacity: 50%;
}

section a {
    font-size: 1.5rem;
    font-weight: bold;
    line-height: 2.5rem;
}

